Note on LoopNestPrinterPass

--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,4 @@ Nuno-Lopes-LLVM/alive2-llvm19.pptx
 Nuno-Lopes-LLVM/poison-llvm16.pptx
 Nuno-Lopes-LLVM/ub-vmcai19.pptx
 Nuno-Lopes-LLVM/undef-pldi17.pdf
+note_llvm_pass
